# HealthBlueprint

./: index.html  package-lock.json  package.json  spec.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: biomarkers.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: commands.rs  mod.rs  schema.rs  seed.rs
src-tauri/src/models/: biomarker.rs  mod.rs  user.rs
src/components/blueprint/: BlueprintViewer.tsx  MarkdownRenderer.tsx
src/components/common/: Button.tsx  Card.tsx  HealthTierBadge.tsx  LoadingSpinner.tsx
src/components/dashboard/: BiomarkerCard.tsx  Dashboard.tsx  RangeVisualizer.tsx
src/components/forms/: BiomarkerLogForm.tsx  BiometricForm.tsx  HabitForm.tsx  ProfileForm.tsx
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/hooks/: useHealthAPI.ts
src/pages/: BlueprintPage.tsx  DashboardPage.tsx  LogDataPage.tsx  ProfilePage.tsx
src/types/: health.ts
